--- a/trab/templates/compra/compras.html
+++ b/trab/templates/compra/compras.html
@@ -26,12 +26,12 @@
                             <span class="fw-bold">{{ compra.fornecedor.nome }}</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <span><i class="bi bi-currency-dollar me-2"></i>Valor Total</span>
-                            <span class="fw-bold text-success">R$ {{ "%.2f"|format(compra.valor_total) }}</span>
+                            <span><i class="bi bi-currency-dollar me-2"></i>Custo</span>
+                            <span class="fw-bold text-danger">R$ {{ "%.2f"|format(compra.valor_total + (compra.valor_total * 0.17)) }}</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center">
                             <span><i class="bi bi-currency-dollar me-2"></i>Status</span>
-                            <span class="fw-bold text-success">R$ {{ compra.status }}</span>
+                            <span class="fw-bold">{{ compra.status }}</span>
                         </li>
                     </ul>
                 </div>
@@ -40,9 +40,11 @@
                         <a href="#" class="btn btn-sm btn-outline-primary me-2">
                             <i class="bi bi-eye"></i> Detalhes
                         </a>
-                        <a href="#" class="btn btn-sm btn-outline-danger">
-                            <i class="bi bi-trash"></i> Excluir
-                        </a>
+                        <form action="{{ url_for('cancelar_compra', compra_id=compra.id) }}" method="POST" style="display: inline;">
+                            <button type="submit" class="btn btn-sm btn-outline-danger">
+                                Cancelar
+                            </button>
+                        </form>
                     </div>
                 </div>
             </div>
