--- a/trab/templates/produto/produtos.html
+++ b/trab/templates/produto/produtos.html
@@ -31,7 +31,7 @@
                         {% if produto.estoque %}
                         <li class="list-group-item d-flex justify-content-between align-items-center">
                             <span><i class="bi bi-percent me-2"></i>Estoque</span>
-                            <span class="fw-bold">{{ produto.estoque }}%</span>
+                            <span class="fw-bold">{{ produto.estoque }}</span>
                         </li>
                         {% endif %}
                         <li class="list-group-item d-flex justify-content-between align-items-center">
