--- a/trab/templates/compra/compras.html
+++ b/trab/templates/compra/compras.html
@@ -13,16 +13,19 @@
         <div class="col">
             <div class="card h-100 shadow-sm">
                 <div class="card-header bg-primary text-white">
-                    <h5 class="card-title mb-0">{{ compra.data_compra.strftime('%d/%m/%Y') }}</h5>
+                    <h5 class="card-title mb-0">
+                        <i class="bi-calendar2-event"></i>
+                        {{ compra.data_compra.strftime('%d/%m/%Y') }}
+                    </h5>
                 </div>
                 <div class="card-body">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <span><i class="bi bi-calendar me-2"></i>Nota Fiscal</span>
+                            <span><i class="bi bi-card-heading me-2"></i>Nota Fiscal</span>
                             <span class="fw-bold">{{ compra.nf_entrada }}</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <span><i class="bi bi-building me-2"></i>Fornecedor</span>
+                            <span><i class="bi bi-truck me-2"></i>Fornecedor</span>
                             <span class="fw-bold">{{ compra.fornecedor.nome }}</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -30,7 +33,7 @@
                             <span class="fw-bold text-danger">R$ {{ "%.2f"|format(compra.valor_total + (compra.valor_total * 0.17)) }}</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <span><i class="bi bi-currency-dollar me-2"></i>Status</span>
+                            <span><i class="bi bi-circle me-2"></i>Status</span>
                             <span class="fw-bold">{{ compra.status }}</span>
                         </li>
                     </ul>
