--- a/trab/templates/produto/produtos.html
+++ b/trab/templates/produto/produtos.html
@@ -30,12 +30,12 @@
                         </li>
                         {% if produto.estoque %}
                         <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <span><i class="bi bi-percent me-2"></i>Estoque</span>
+                            <span><i class="bi bi-bookshelf me-2"></i>Estoque</span>
                             <span class="fw-bold">{{ produto.estoque }}</span>
                         </li>
                         {% endif %}
                         <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <span><i class="bi bi-percent me-2"></i>Status</span>
+                            <span><i class="bi bi-circle me-2"></i>Status</span>
                             <span class="fw-bold">{{ produto.status }}</span>
                         </li>
                     </ul>
