--- a/trab/templates/index.html
+++ b/trab/templates/index.html
@@ -13,7 +13,7 @@
                 <div class="card-body text-center">
                     <i class="bi bi-box-seam text-primary" style="font-size: 2.5rem;"></i>
                     <h5 class="card-title mt-3">Produtos</h5>
-                    <p class="card-text">Cadastre e gerencie seu estoque com preços e ICMS</p>
+                    <p class="card-text">Cadastre e gerencie produtos</p>
                     <a href="{{ url_for('produtos') }}" class="btn btn-outline-primary stretched-link">Acessar</a>
                 </div>
             </div>
@@ -24,7 +24,7 @@
                 <div class="card-body text-center">
                     <i class="bi bi-people text-primary" style="font-size: 2.5rem;"></i>
                     <h5 class="card-title mt-3">Clientes</h5>
-                    <p class="card-text">Gerencie seus clientes e histórico de compras</p>
+                    <p class="card-text">Gerencie seus clientes</p>
                     <a href="{{ url_for('clientes') }}" class="btn btn-outline-primary stretched-link">Acessar</a>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                 <div class="card-body text-center">
                     <i class="bi bi-truck text-primary" style="font-size: 2.5rem;"></i>
                     <h5 class="card-title mt-3">Fornecedores</h5>
-                    <p class="card-text">Controle seus parceiros e entradas de produtos</p>
+                    <p class="card-text">Gerencie seus parceiros</p>
                     <a href="{{ url_for('fornecedores') }}" class="btn btn-outline-primary stretched-link">Acessar</a>
                 </div>
             </div>
