--- a/trab/templates/index.html
+++ b/trab/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <div class="text-center mb-5">
-        <h1 class="display-4 text-primary">Sistema Contábil</h1>
+        <h1 class="display-4 text-primary">Sistema Contabilidade</h1>
         <p class="lead">Gestão completa de produtos, clientes, fornecedores e movimentações</p>
     </div>
 
