--- a/trab/templates/layout.html
+++ b/trab/templates/layout.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
         <div class="container">
-            <a class="navbar-brand" href="/">Sistema Contábil</a>
+            <a class="navbar-brand" href="/">Sistema Contabilidade</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
                 <span class="navbar-toggler-icon"></span>
             </button>
