--- a/trab/templates/layout.html
+++ b/trab/templates/layout.html
@@ -28,16 +28,19 @@
                         <a class="nav-link" href={{url_for('produtos')}}>Produtos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href={{url_for('vendas')}}>Vendas</a>
+                        <a class="nav-link" href={{url_for('clientes')}}>Clientes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href={{url_for('fornecedores')}}>Fornecedores</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href={{url_for('compras')}}>Compras</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href={{url_for('clientes')}}>Clientes</a>
+                        <a class="nav-link" href={{url_for('vendas')}}>Vendas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href={{url_for('fornecedores')}}>Fornecedores</a>
+                        <a class="nav-link" href="{{url_for('index')}}">Relatórios</a>
                     </li>
                 </ul>
             </div>
